# career_scraper

./: .gitignore  README.md  pyproject.toml
career_scraper/: cli.py
career_scraper/sources/: amazon.py  apple.py
rolefetch/: __init__.py  __main__.py  cli.py  export.py
rolefetch/sources/: amazon.py  apple.py  google.py
tests/: test_amazon.py  test_apple_normalize.py  test_apple_pagination.py  test_cli.py  test_export.py  test_google.py
tests/fixtures/: amazon_search_page.json  google_job_detail_about_only.html  google_job_detail_sample.html
